tests/fail/fail_undefined_variable.kl
// ERROR: variable used before it is declared.
vaziu inisiu() {
    mostra(x);
    nter x = 10;
}
